Fixed click action of car image redirect to car show by adding dataset to element, fixed button colors

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,44 @@
  body {
   padding-top: 56px;
 }
+.title{
+  font-family: 'Raleway', sans-serif;
+}
+.cardbox:hover{
+  box-shadow: 5px 5px 3px lightblue;
+}
 
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
@@ -5100,6 +5137,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   margin-bottom: 2rem;
   background-color: #e9ecef;
   border-radius: 0.3rem;
+ 
 }
 
 @media (min-width: 576px) {
